--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,20 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Currency Converter"
+    />
+    <meta 
+      name="keywords"
+      content="Justice,Ampofo,Currency,Converter"
+    />
+    <meta 
+      name="author"
+      content="Justice Ampofo"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Currency Converter</title>
+    <title>Currency Converter - Justice Ampofo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
